# nginx-with-gunicorn-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  nginx.conf
backend/: pyproject.toml
backend/src/sample/: app.py
backend/src/sampleproject.egg-info/: PKG-INFO  SOURCES.txt
frontend/: package-lock.json
frontend/src/: App.tsx
