[build-system]
requires = ["setuptools"]               # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[project]
name = "sampleproject"                  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "3.0.0"                       # REQUIRED, although can be dynamic
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["flask", "gunicorn"]

# Refacttor to use if needed
[project.scripts]
sample = "sample:main"
